--- a/index.rmd
+++ b/index.rmd
@@ -1,204 +1,19 @@
 ---
-title: "Comparison of Costs"
-author: "Russel Willems and Adam Elder"
-date: "1/12/2020"
-output: 
-    html_document:
-        css: style.css
-        code_folding: hide
-        number_sections: TRUE
-        fig_width : 12
-        fig_height : 9
+title: "Third Door Information: "
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    fig_width: 1
 ---
 
-```{r setup, include=FALSE, echo = FALSE, warning = FALSE, message = FALSE, include = FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE)
-library(tidyverse)
-sub_info <- list("Land" = "Land", 
-                 "Existing Structure" = "Existing Structure",
-                 "Construction" = "Construction",
-                 "Pre Construction Services" = "Pre Construction Services",
-                 "Demo" = "Demo",
-                 "General Contractor Costs: Roll below values up" = c( "New Building", "Rehab", "Furnishings", "Appliances", "Site Work/Infrastructure", "Flooring", "Land Improvements", "Off site infrastructure", "Environmental Abatement (Building)", "Environmental Abatement (Land)", "Contractor Profit", "Contractor Overhead"),
-                 "Environmental Abatement by Owner: " = c("Building", "Land2"),
-                 "Construction Contingencies" = c("Construction Contingency", "Escalation", "Contractor Contingency"),
-                 "Sales Tax" = c("Sales Tax on GC Contract Work", "Sales Tax on Contingency + Owner Direct Work"),
-                 "Bond Premium" = "Bond Premium",
-                 "Owner Construction Costs:" = c( "Common Area Furnishings", "Apartment Furnishings ", "Low Voltage Contractor", "Other Owner Direct Contracts"),
-                 "Appraisal" = "Appraisal",
-                 "Market Study" = "Market Study",
-                 "Architect:" = c("Site Analysis and Concept", "Base Contract", "Capital Needs Assessment", "Reimbursables"),
-                 "Engineering" = "Engineering",
-                 "Environmental Assessment" = "Environmental Assessment",
-                 "Geotechnical Study" = "Geotechnical Study",
-                 "Boundary & Topographic Survey" = "Boundary & Topographic Survey",
-                 "Legal - Real Estate" = "Legal - Real Estate",
-                 "Developer Fee:" = "Developer Fee:",
-                 "Other Construction Testing Consultants:" = c("Surveyor Monitoring", "Air Barrier & Window Testing", "Geotech Monitoring", "Structural Testing (Special Inspections)", "HVAC & Plumbing Commissioning"),
-                 "Other Soft Costs: " = c("Construction Easements", "SCL Transformer Trucking"),
-                 "Construction Loan Fees:" = c("Origination Fee", "Inspections", "Appraisal2", "Bank Legal", "PSH DEV org Legal"),
-                 "Construction Loan Interest" = "Construction Loan Interest",  
-                   "Perm Loan Fees" = "Perm Loan Fees",
-                 "Perm Loan Expenses " = "Perm Loan Expenses ",
-                 "Perm Loan Legal" = "Perm Loan Legal",
-                 "LIHTC Fees(WSHFC)" = "LIHTC Fees(WSHFC)",
-                 "LIHTC Legal:" = c("Investor Legal", "PSH Dev. Org Legal"),
-                 "State HTF Fees" = "State HTF Fees",
-                 "Operating Reserves" = "Operating Reserves",
-                 "Investor Service Fee Reserve" = "Investor Service Fee Reserve",
-                 "Replacement Reserves" = "Replacement Reserves",
-                 "Insurance:" = c("Builders Risk", "Liability for PSH Dev org", "Other"),
-                 "Relocation" = "Relocation",
-                 "Permits Fees & Hookups" = c("SDCI (Building & Land Use)", "Seattle City Light ", "SDOT ", "SPU", "KC Wastewater Treatment", "Phone/Cable/Internet"),
-                 "Development Period Utilities" = "Development Period Utilities",
-                 "LIHTC Nonprofit Donation " = "LIHTC Nonprofit Donation ",
-                 "Accounting/Audit" = "Accounting/Audit",
-                 "Marketing/Leasing Expenses" = "Marketing/Leasing Expenses",
-                 "Carrying Costs at Rent Up" = "Carrying Costs at Rent Up")
-  
-orig_dat <- read.csv("cost_break.csv", stringsAsFactors = FALSE)
+----
 
-double_land <- which(orig_dat$Project.Profile == "Land")
-double_apprais <- which(orig_dat$Project.Profile == "Appraisal")
+This website is meant to contain all of the information that Russel and Adam have been working on getting to you.
 
-orig_dat$Project.Profile[double_land[2]] <- "Land2"
-orig_dat$Project.Profile[double_apprais[2]] <- "Appraisal2"
+The chapters included are:
 
-make_row <- function(data_f, list, list_idx, proj_num){
-  outer_name <- names(list)[list_idx]
-  sub_names <- list[[list_idx]]
-  col_name <- colnames(data_f)[grep(proj_num, colnames(data_f))][2]
-  sub_data <- data_f %>% subset(Project.Profile %in% sub_names, 
-                                select = col_name)
-  for(sub_idx in 1:nrow(sub_data)){
-    row_val <- c(outer_name, list[[list_idx]][[sub_idx]],
-                 proj_num, sub_data[sub_idx, 1])
-    if(exists("cat_mat")){
-      cat_mat <- rbind(cat_mat, row_val)
-    }else{
-      cat_mat <- matrix(row_val, nrow = 1)
-      colnames(cat_mat) <- c("Category", "Subcategory", "Project", "Expense")
-    }
-  }
-  rownames(cat_mat) <- NULL
-  return(cat_mat)
-}
-
-make_row_c <- function(data_f, list, list_idx, proj_num){
-  outer_name <- names(list)[list_idx]
-  sub_names <- list[[list_idx]]
-  col_name <- colnames(data_f)[grep(proj_num, colnames(data_f))][2]
-  sub_data <- data_f %>% subset(Project.Profile %in% outer_name, 
-                                select = col_name)
-  row_val <- c(outer_name, proj_num, sub_data[1, 1])
-  if(exists("cat_mat")){
-    cat_mat <- rbind(cat_mat, row_val)
-  }else{
-    cat_mat <- matrix(row_val, nrow = 1)
-    colnames(cat_mat) <- c("Category", "Subcategory", "Project", "Expense")
-  }
-  
-  rownames(cat_mat) <- NULL
-  return(cat_mat)
-}
-```
-
-# Fine Detail Cost Breakdowns
-
-```{r cars, warning = FALSE}
-for(l_idx in 1:length(sub_info)){
-  for(p_idx in 1:5){
-    if(exists("fin_mat")){
-      fin_mat <- rbind(fin_mat, make_row(orig_dat, sub_info, l_idx, p_idx))
-    }else{
-      fin_mat <- make_row(orig_dat, sub_info, l_idx, p_idx)
-    }
-  }
-}
-
-for(l_idx in 1:length(sub_info)){
-  for(p_idx in 1:5){
-    if(exists("cm_mat")){
-      cm_mat <- rbind(cm_mat, make_row(orig_dat, sub_info, l_idx, p_idx))
-    }else{
-      cm_mat <- make_row(orig_dat, sub_info, l_idx, p_idx)
-    }
-  }
-}
+Chapter | Content
+-------------- | ------------------------------------------
+Introduction | Project purpose and rationale for data source selections
 
 
-fin_df <- as.data.frame(fin_mat, stringsAsFactors = FALSE)
-cat_df <- as.data.frame(cm_mat, stringsAsFactors = FALSE)
-fin_df$Project <- c("Capital stack", "Fees, Permiting, and Tax",
-                    "Non-podium construction", "Free Land",
-                    "Compounded Savings")[as.numeric(fin_df$Project)]
-cat_df$Project <- c("Capital stack", "Fees, Permiting, and Tax",
-                    "Non-podium construction", "Free Land",
-                    "Compounded Savings")[as.numeric(cat_df$Project)]
-fin_df[, 4] <- as.numeric(fin_df[, 4])
-cat_df[, 4] <- as.numeric(cat_df[, 4])
-
-library(plotly)
-
-plot_ly(fin_df, x = ~Project, y = ~Expense, type = 'bar', 
-        name = ~Subcategory, color = ~Subcategory) %>%
-  layout(yaxis = list(title = 'Count'), barmode = 'stack')
-```
-
-# Rough Cost Breakdown
-
-```{r pressure, echo=FALSE, warning = FALSE}
-plot_ly(fin_df, x = ~Project, y = ~Expense, type = 'bar', 
-        name = ~Category, color = ~Category) %>%
-  layout(yaxis = list(title = 'Count'), barmode = 'stack')
-
-```
-
-# Costs that differ accross project types
-
-```{r just_diffs, warning = FALSE}
-is_dif <- function(df, cat_name){
-  s_df <- df %>% subset(Category == cat_name)
-  s_df$Expense[is.na(s_df$Expense)] <- 0
-  as.logical(0 != sum(abs(s_df$Expense - s_df$Expense[1])))
-}
-
-rm("dif_mat")
-for(l_idx in 1:length(sub_info)){
-  v_name <- names(sub_info)[l_idx]
-  if (is_dif(cat_df, v_name)){
-    if (exists("dif_mat")){
-      dif_mat <- rbind(dif_mat, 
-                       cat_df %>% subset(Category == v_name))
-    }else{
-      dif_mat <- cat_df %>% subset(Category == v_name)
-    }
-  }
-}
-
-plot_ly(dif_mat, x = ~Project, y = ~Expense, type = 'bar', 
-        name = ~Category, color = ~Category) %>%
-  layout(yaxis = list(title = 'Count'), barmode = 'stack')
-```
-
-# Unchanging costs
-
-```{r same_costs, warning = FALSE}
-rm("same_mat")
-for(l_idx in 1:length(sub_info)){
-  v_name <- names(sub_info)[l_idx]
-  if (!is_dif(cat_df, v_name)){
-    if (exists("same_mat")){
-      same_mat <- rbind(same_mat, 
-                       cat_df %>% subset(Category == v_name))
-    }else{
-      same_mat <- cat_df %>% subset(Category == v_name)
-    }
-  }
-}
-plot_ly(same_mat, x = ~Project, y = ~Expense, type = 'bar', 
-        name = ~Category, color = ~Category) %>%
-  layout(yaxis = list(title = 'Count'), barmode = 'stack')
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
