--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -6,9 +6,8 @@ output:
     toc_float: true
 ---
 
-<br>
-
-## Third door does cool work to find out what works best (PSH)
+This website is meant to be a repository for showing storing and communicating the research that has been done for Third Door.
+ 
 
 
 
